docs/api/qiskit/0.31/qiskit.aqua.algorithms.GroverResult.md
---
title: GroverResult
description: API reference for qiskit.aqua.algorithms.GroverResult
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.algorithms.GroverResult
---

# GroverResult

<span id="qiskit.aqua.algorithms.GroverResult" />

`GroverResult(a_dict=None)`[GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.9/qiskit/aqua/algorithms/amplitude_amplifiers/grover.py "view source code")

Bases: `qiskit.aqua.algorithms.algorithm_result.AlgorithmResult`

Grover Result.

## Methods

### clear

<span id="qiskit.aqua.algorithms.GroverResult.clear" />

`GroverResult.clear()`

**Return type**

`None`

### combine

<span id="qiskit.aqua.algorithms.GroverResult.combine" />

`GroverResult.combine(result)`

Any property from the argument that exists in the receiver is updated. :type result: `AlgorithmResult` :param result: Argument result with properties to be set.

**Raises**

**TypeError** – Argument is None

**Return type**

`None`

### copy

<span id="qiskit.aqua.algorithms.GroverResult.copy" />

`GroverResult.copy()`

### from\_dict

<span id="qiskit.aqua.algorithms.GroverResult.from_dict" />

`static GroverResult.from_dict(a_dict)`[GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.9/qiskit/aqua/algorithms/amplitude_amplifiers/grover.py "view source code")

create new object from a dictionary

**Return type**

`GroverResult`

### fromkeys

<span id="qiskit.aqua.algorithms.GroverResult.fromkeys" />

`classmethod GroverResult.fromkeys(iterable, value=None)`

### get

<span id="qiskit.aqua.algorithms.GroverResult.get" />

`GroverResult.get(k[, d]) → D[k] if k in D, else d. d defaults to None.`

### items

<span id="qiskit.aqua.algorithms.GroverResult.items" />

`GroverResult.items() → a set-like object providing a view on D’s items`

### keys

<span id="qiskit.aqua.algorithms.GroverResult.keys" />

`GroverResult.keys() → a set-like object providing a view on D’s keys`

### pop

<span id="qiskit.aqua.algorithms.GroverResult.pop" />

`GroverResult.pop(key, default=None)`

If key is not found, d is returned if given, otherwise KeyError is raised.

**Return type**

`object`

### popitem

<span id="qiskit.aqua.algorithms.GroverResult.popitem" />

`GroverResult.popitem()`

as a 2-tuple; but raise KeyError if D is empty.

**Return type**

`Tuple`\[`object`, `object`]

### setdefault

<span id="qiskit.aqua.algorithms.GroverResult.setdefault" />

`GroverResult.setdefault(k[, d]) → D.get(k,d), also set D[k]=d if k not in D`

### update

<span id="qiskit.aqua.algorithms.GroverResult.update" />

`GroverResult.update(*args, **kwargs)`

If E present and has a .keys() method, does: for k in E: D\[k] = E\[k] If E present and lacks .keys() method, does: for (k, v) in E: D\[k] = v In either case, this is followed by: for k, v in F.items(): D\[k] = v

**Return type**

`None`

### values

<span id="qiskit.aqua.algorithms.GroverResult.values" />

`GroverResult.values() → an object providing a view on D’s values`

## Attributes

<span id="qiskit.aqua.algorithms.GroverResult.assignment" />

### assignment

return assignment

**Return type**

`List`\[`int`]

<span id="qiskit.aqua.algorithms.GroverResult.circuit" />

### circuit

return circuit

**Return type**

`Optional`\[`QuantumCircuit`]

<span id="qiskit.aqua.algorithms.GroverResult.measurement" />

### measurement

returns measurement

**Return type**

`Optional`\[`Dict`\[`str`, `int`]]

<span id="qiskit.aqua.algorithms.GroverResult.oracle_evaluation" />

### oracle\_evaluation

return oracle evaluation

**Return type**

`bool`

<span id="qiskit.aqua.algorithms.GroverResult.top_measurement" />

### top\_measurement

return top measurement

**Return type**

`Optional`\[`str`]

